# PlonkScript

./: .gitmodules  Cargo.toml  package.json
.github/workflows/: build-docs.yml  build-ui.yml  build-wasm.yml  deploy-all.yml
docs/content/.vitepress/: config.ts
docs/content/analyzer/: plonky2.md  plonky3.md
docs/content/example/: fibonacci.md  mimc.md  poseidon.md
docs/content/language/: syntax.md
export_halo2_project/: Cargo.toml
export_halo2_project/src/: lib.rs
plonk/src/: fibonacci.plonk  mimc5.plonk  poseidon.plonk  simple_arith.plonk  simple_demo.plonk
plonky3_summarizer/: Cargo.toml
plonky3_summarizer/src/: lib.rs
transpiler/: Cargo.toml  mimc5-feistel.plonk  mimc5.plonk  table_simple.plonk
transpiler/plonk_lib/: mimc5_params.plonk  poseidon_params.plonk
transpiler/src/: circuit.rs  generator.rs  lib.rs  main.rs  system.rs  tests.rs  transpiler.rs
transpiler/src/engine/: bind.rs  custom_type.rs  gate.rs  io.rs  mod.rs  operator.rs  resolver.rs
transpiler/src/generator/: config_entity.rs  configure.rs  header.rs  mod.rs  synthesize.rs  test.rs  util.rs
transpiler/src/system/: cell_expression.rs
ui/: .eslintignore  package.json
ui/src/components/: ConstraintsVisualization.vue  Plonky2Visualization.vue  Plonky3Visualization.vue
ui/src/layouts/: MainLayout.vue
ui/src/pages/: EditorPage.vue  Plonky2AnalyzerPage.vue  Plonky3AnalyzerPage.vue
ui/src/router/: routes.ts
ui/src/services/: ConstraintSystem.ts  MockProverTranslator.ts  PlonkScriptLanguage.ts
wasm_binding/: Cargo.toml
wasm_binding/src/: lib.rs
(+6 files in other folders)
