[package]
name = "transpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { path = "../vendor/halo2/halo2_proofs" }
rhai = { version = "1.19.0", features = ["internals"] }
regex = "*"
once_cell = "*"
halo2_summarizer = { path = "../halo2_summarizer" }
hex = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2"
quote = "1.0"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }
proc-macro2 = { version = "1.0.74", default-features = false }
